fixed dropdown z-index

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -32,12 +32,13 @@
 
   // dropdown
   &-dropdown {
-    display: none;
-    flex-direction: column;
-
     position: absolute;
+    z-index: 100;
     left: 0;
     top: 100%;
+
+    display: none;
+    flex-direction: column;
 
     .cart_list {
       padding: 0;
